# korrect

./: .gitignore  CONTRIBUTING.md  README.md  requirements.txt  setup.cfg  style.css  testing.ipynb
examples/: testing.ipynb
korrect/: backend.py  core.py  experiment.py  main.py  model.py  style.css  ui.py  utils.py
korrect/methods/: extractor.py  tool.py
korrect/methods/prompts/: validation.yaml
