[metadata]
name = korrect
version = attr: version.__version__
description = fact-checking for LLMs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kortex-labs/korrect
author = Kortex Technologies

[options]
packages = find:
include_package_data = True
install_requires =
    openai==0.27.8
    PyYAML==6.0
    asyncio==3.4.3
    numpy
    pydantic==1.10.9
    scholarly==1.7.11
    scikit-learn
    aiohttp==3.8.4
    fastapi==0.96.0
    uvicorn==0.22.0
    jsonlines


[options.package_data]
korrect.utils.prompts = *.yaml



[flake8]
application-import-names = korrect
exclude = __pycache__, datasets
extend-ignore = E203, BLK100, W503, FI10, FI11, FI12, FI13, FI14, FI15, FI16, FI17, FI58
filename = ./korrect/*.py, ./setup.py
max-line-length = 88

[isort]
filter_files = true
force_sort_within_sections = true
multi_line_output = 3
order_by_type = false
profile = black
src_paths = korrect